@@ -1,6 +1,3 @@
 #!/bin/bash
 
-#eliminar - del texto
-TEXTO=`cat|sed 's/-//'`
-
-say  "$TEXTO"
+say -f -
